# test1

./: CMakeLists.txt  README.txt  build.sh  makefile  manual.sh  onvif.sublime-workspace  onvif_C
.github/workflows/: build.yml
C/include/: common.h  lib.h  onvif.h
C/include/device/: camera_pool.h  device.h
C/include/discovery/: discovery.h
C/include/manage/: manage.h
C/include/memory/: memory.h
C/include/network/: network.h
C/include/ptz/: ptz.h
C/include/snap/: media.h
C/include/utils/: bits.h  soap.h
C/src/device/: camera_pool.c  device.c
C/src/discovery/: discovery.c
C/src/manage/: manage.c
C/src/memory/: memory.c
C/src/network/: network.c
C/src/ptz/: ptz.c
C/src/snap/: media.c
C/src/utils/: bits.c  soap.c
deprecated/: camera_pool.c  camera_pool.h
doxygen/: onvif_C
include/: onvif.h  onvif_common.h  onvif_lib.h
include/connection/: device.h  discovery.h  media.h  ptz.h  soap.h
include/io/: properties.h
include/management/: bits.h  camera_pool.h  manage.h  procedure.h
include/memory/: memory.h
include/network/: network.h
json-c/lib/cmake/cJSON/: cJSONConfig.cmake  cjson-release.cmake  cjson.cmake  cjson_utils-release.cmake  cjson_utils.cmake
json-c/lib/pkgconfig/: libcjson.pc  libcjson_utils.pc
modules/: CMakeLists.txt  dummy.c
modules/cJSON/: CMakeLists.txt
modules/connection/: CMakeLists.txt  device.c  discovery.c  media.c  ptz.c  soap.c
modules/include/: common.h  lib.h  onvif.h  onvif_common.h  onvif_lib.h
modules/include/connection/: device.h  discovery.h  media.h  ptz.h  soap.h
modules/include/management/: bits.h  camera_pool.h  manage.h
modules/include/memory/: memory.h
modules/include/network/: network.h
modules/io/: CMakeLists.txt  properties.c
modules/management/: CMakeLists.txt  bits.c  camera_pool.c  manage.c  procedure.c
modules/memory/: CMakeLists.txt  memory.c
modules/network/: CMakeLists.txt  network.c
modules/onvif/: CMakeLists.txt  namespace.h  onvifstub.c  soapClient.c  soapStub.h  struct_timeval.c
modules/onvif/custom/: CMakeLists.txt
modules/onvif/plugins/: CMakeLists.txt
test/include/: test_common.h
test/src/: CMakeLists.txt
test/src/hello/: CMakeLists.txt  hello.c
test/src/io/: CMakeLists.txt  test_properties1.c
test/static/io/: t2.properties  t4.properties  t5.properties
