ADD_SUBDIRECTORY(onvif)
ADD_SUBDIRECTORY(connection)
ADD_SUBDIRECTORY(management)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(memory)

AUX_SOURCE_DIRECTORY(. STUB)

ADD_LIBRARY(onvif SHARED)
SET_TARGET_PROPERTIES(onvif PROPERTIES VERSION 0.0.2 SOVERSION 0)
TARGET_SOURCES(onvif PRIVATE ${STUB})
TARGET_LINK_LIBRARIES(onvif PRIVATE onvif_connection onvif_management onvif_network onvif_memory -Wl,--wrap,malloc -Wl,--wrap,free)

INSTALL(TARGETS onvif
		LIBRARY DESTINATION onvif/lib)
INSTALL(DIRECTORY include/
		DESTINATION onvif/include)